Use openapi for API code generation
Introduce mapStruct for mapping between API classes and internal classes
