# src/main/java/com/hrusch/timetrials/webservice/controller/response/ApiSubError.java
@@ -1,15 +1,0 @@
-package com.hrusch.timetrials.webservice.controller.response;
-
-import com.fasterxml.jackson.annotation.JsonSubTypes;
-import com.fasterxml.jackson.annotation.JsonTypeInfo;
-
-@JsonTypeInfo(
-    use = JsonTypeInfo.Id.NAME,
-    property = "type"
-)
-@JsonSubTypes({
-    @JsonSubTypes.Type(value = ApiValidationError.class, name = "validationError")
-})
-public interface ApiSubError {
-
-}
